OO-3352: add option to enable "Strict-Transport-Security" and "X-Content-Type-Options" headers